--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "App to connect software developer",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start":"nodemon src/app.js"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,9 @@
     "TailwindCSS"
   ],
   "author": "Pranai Reddy",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^5.1.0",
+    "nodemon": "^3.1.10"
+  }
 }
