--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "App to connect software developer",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon src/app.js"
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js"
   },
   "repository": {
     "type": "git",
